# rag_project_assistant

./: .gitignore  README.md  config.py  main.py  pyproject.toml  tests.sh
.github/workflows/: ci.yml
data/: golden_dataset.json  projects.json
pages/: evaluation.py  main_page.py
prompts/: system_prompt.txt
src/: augmented_generation.py  hybrid_search.py  inverted_index.py  keyword_search.py  semantic_search.py  utils.py
src/tests/: mock_projects.py  test_hybrid_search.py  test_inverted_index.py  test_keyword_search.py  test_semantic_search.py  test_utils.py
